--- a/order/templates/order/base_admin.html
+++ b/order/templates/order/base_admin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Food Ordering{% endblock %}</title>
+    <title>{% block title %}Food Ordering - Admin{% endblock %}</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
@@ -46,16 +46,20 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand font-weight-bold" href="{% url 'menu' %}">Food Ordering</a>
+        <a class="navbar-brand font-weight-bold" href="{% url 'menu_admin' %}">Food Ordering - Admin</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
+        
     
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto d-flex align-items-center">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'order_history' %}">Order History</a>
+                        <a class="nav-link" href="{% url 'summary' %}">Summary</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'order_history_admin' %}">Manage Order</a>
                     </li>
                     <li class="nav-item">
                         <form action="{% url 'logout' %}" method="post" class="d-inline">
@@ -96,6 +100,8 @@
         </div>
     </div>
     {% endif %}
+
+    
 
     <footer class="footer py-3">
         <div class="container text-center">
