--- a/order/templates/order/menu_admin.html
+++ b/order/templates/order/menu_admin.html
@@ -2,6 +2,11 @@
 
 {% block content %}
     <div class="container mt-5">
+        <!-- Add Food Button -->
+        <div class="mb-4">
+            <a href="{% url 'add_food_item' %}" class="btn btn-success">Add Food</a>
+        </div>
+        
         <h2 class="text-center mb-4">Create an Order or Click on Details to Manage Foods</h2>
         <form method="POST" action="{% url 'place_order_admin' %}" class="p-4 border rounded shadow-sm">
             {% csrf_token %}
@@ -9,13 +14,13 @@
                 {% for food in food_items %}
                     <div class="form-check d-flex justify-content-between align-items-center">
                         <div>
-                            <input type="checkbox" class="form-check-input" name="food_items" value="{{ food.id }}" id="food_{{ food.id }}">
+                            <input type="checkbox" class="form-check-input" name="food_items" value="{{ food.id }}" id="food_{{ food.id }}" {% if not food.available %} disabled {% endif %}>
+                            
                             <label class="form-check-label" for="food_{{ food.id }}">
                                 {{ food.name }} - <strong>${{ food.price }}</strong>
                             </label>
                         </div>
                         <a href="{% url 'update_food_item' food.id %}">Details/Manage</a>
-
                     </div>
                 {% endfor %}
             </div>
